package pebl.benchmark.feature;

import javax.xml.bind.annotation.XmlEnum;

/**
 * Defined in the ISO/IEC 25010 standard
 */
@XmlEnum
public enum Characteristic {

    FUNCTIONAL_SUITABILITY,
    FUNCTIONAL_COMPLETENESS,
    FUNCTIONAL_CORRECTNESS,
    FUNCTIONAL_APPROPRIATENESS,

    PERFORMANCE_EFFICIENCY,
    TIME_BEHAVIOUR,
    RESOURCE_UTILISATION,
    CAPACITY,

    COMPATABILITY,
    CO_EXISTENCE,
    INTEROPERABILITY,

    USABILITY,
    APPROPRIATENESS_RECOGNISABILITY,
    LEARNABILITY,
    OPERABILITY,
    USER_ERROR_PROTECTION,
    USER_INTERFACE_AESTHETICS,
    ACCESSIBILITY,

    RELIABILITY,
    MATURITY,
    AVAILABILITY,
    FAULT_TOLERANCE,
    RECOVERABILITY,

    SECURITY,
    CONFIDENTIALITY,
    INTEGRITY,
    NON_REPUDIATION,
    ACCOUNTABILITY,
    AUTHENTICITY,

    MAINTAINABILITY,
    MODULARITY,
    REUSABILITY,
    ANALYSABILITY,
    MODIFIABILITY,
    TESTABILITY,

    PORTABILITY,
    ADAPTABILITY,
    INSTALLABILITY,
    REPLACEABILITY

}
