package pebl.result;

public class Metric {

}
